[metadata]
name = axantir
version = 1.1.0
description = Permission and auditing system
long_description = file: README.md
long_description_content_type = text/markdown
author = Adam Sussman
author_email = adam.sussman@gmail.com
url = https://github.com/adamsussman/axantir
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security

python_requires = >= 3.8

[options]
packages = axantir, axantir.audit, axantir.files, axantir.permissions
install_requires =
    pydantic >= 2.5
    boto3
    python-magic
    semver

[options.extras_require]
test =
    moto
    pytest
    pytest-cov
    pytest-freezer
    pytest-mock
    flask
    sqlalchemy
dev =
    mypy
    black
    isort
    flake8
    flake8-bugbear
    flake8-debugger
    ipdb

[options.package_data]
axantir = py.typed


[tool:pytest]
addopts = --cov=axantir --no-cov-on-fail -s

[coverage:report]
fail_under: 85
show_missing: True
omit: axantir/__init__.py, axantir/permissions/testing.py, axantir/audit/testing.py

[tool:isort]
profile = black
multi_line_output = 3
include_trailing_comma = True

[flake8]
max-line-length = 100

[mypy]
python_version = 3.11
warn_unused_configs = True
disallow_untyped_defs = True
namespace_packages = True
plugins = pydantic.mypy

[mypy-semver]
ignore_missing_imports = True

[mypy-boto3]
ignore_missing_imports = True

[mypy-moto]
ignore_missing_imports = True

[mypy-botocore.*]
ignore_missing_imports = True
